Version 2.7.10dev:

* Cached images can be read from pre-generated zip files to reduce the
  amount of small files.
* Force the kickstarts directory to be included in file scanner.
* Game list selector entry was not respected after updating the game db.

Version 2.7.9dev:

* Warn about old plugin versions, if detected.
* Detect ~/.wine/users/Public/Documents/Amiga Files, if present.
* Some changes to the settings dialog, video pages merged from 3 to 2.
* Scanned files were not stored with proper relative paths on Windows.
* New GUI controls for monitor, fullscreen mode, video sync and monitor info.
* New settings control for starting FS-UAE with full keyboard emulation.
* Fixed issue when you have a mouse with the same device name as a joystick.
* More compact binary distributions, far fewer data files.
* OS X: New skeleton .app launchers for portable suite.
* Windows: Proxy executables passes on arguments.
* CD-based games are now downloadable from OAGD.net locker (if the user has
  them stored there).
* Recognize .ccd CD variants from the online game database.

Version 2.7.8dev:

* You can add custom config on startup (--config:key=value). Especially
  useful when auto-launching games and you want to override config.
* You can start with custom settings (--settings:key=value). Note that the
  changed settings will be permanent / saved.
* Make distinction between Amiga device type and host device more explicit.
* Made launch dialog non-modal.
* Net play feature is enabled by default.
* Moved net play UI into a separate window.
* Clear search field when changing game/config list in dropdown.
* All .sqlite databases moved into Data/Databases.
* Some user interface adjustments.
* Quite a bit of code cleanup and some restructuring.

Version 2.7.7dev:

* Always sort variant list in rated order from oagd.net, but prefer
  locally available variants.
* Automatically scan $BASE/AmigaForever/Amiga Files/Shared/rom for Kickstarts.